OpenJMLTest/test/gitbug499/expected
test/gitbug499/Interval.java:43: error: Expected a declaration or a JML construct inside the JML annotation here
            //@ contains(i);
                ^
test/gitbug499/Interval.java:64: error: Incorrectly formed or terminated JML construct near here
        //@ !contains(i);
                     ^
test/gitbug499/Interval.java:65: error: <identifier> expected
    }
^
Continuing bravely despite parsing errors
test/gitbug499/Interval.java:64: error: cannot find symbol
        //@ !contains(i);
             ^
  symbol:   class contains
  location: class Interval
Operation not performed because of parse or type errors
4 errors
